--- a/trabaja.html
+++ b/trabaja.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="estilo.css">
   <link href="https://fonts.googleapis.com/css2?family=Revalia:wght@700&family=Roboto&display=swap" rel="stylesheet">
 </head>
-<body>
+
+<main>
+
   <header class="header">
     <button class="menu-btn" onclick="toggleMenu()">☰</button>
     <h1 class="logo">Eventos Pro</h1>
@@ -25,20 +27,28 @@
     </ul>
   </nav>
 
-  <main>
-    <section class="categorias">
-      <h3>Únete a Nuestro Equipo</h3>
-      <p>Buscamos personas apasionadas por la organización de eventos, la creatividad y el trabajo en equipo.</p>
-      <form class="form">
-        <input type="text" placeholder="Nombre completo" required>
-        <input type="email" placeholder="Correo electrónico" required>
-        <input type="text" placeholder="Puesto deseado">
-        <textarea placeholder="Cuéntanos sobre ti" rows="4"></textarea>
-        <button type="submit" class="btn-search">Postular</button>
-      </form>
-    </section>
-  </main>
+  <section class="hero-full">
+    <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?auto=format&fit=crop&w=1400&q=80" alt="Trabaja con nosotros" class="hero-img">
+    <div class="hero-content">
+      <h2>Sumate al <span>equipo</span></h2>
+      <p>Buscamos talento creativo y apasionado.</p>
+      <button class="btn-primary">Postular ahora</button>
+    </div>
+  </section>
 
-  <script src="script.js"></script>
+  <br>
+  <br>
+
+  <section class="form-section">
+    <form class="form">
+      <input type="text" placeholder="Nombre completo" required>
+      <input type="email" placeholder="Email" required>
+      <input type="text" placeholder="Puesto al que aplicas">
+      <textarea placeholder="Contanos sobre vos" rows="4"></textarea>
+      <button type="submit" class="btn-primary">Postular</button>
+    </form>
+  </section>
+</main>
+<script src="script.js"></script>
 </body>
 </html>
